paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/size_of_1/sample_001/target.compile.log
error[E0594]: cannot assign to `*dp`, as `dp` is not declared as mutable
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/size_of_1/sample_001/target.rs:4:5
  |
4 |     *dp = 3.14;
  |     ^^^^^^^^^^ cannot assign
  |
help: consider changing this to be mutable
  |
2 |     let mut dp = Box::new(0.0);
  |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.